<resources>
    <string name="app_name">Car Dealer</string>
    <string name="hint_placemarkTitle">Dealer Name</string>
    <string name="hint_address">Address </string>
    <string name="hint_website">Website </string>
    <string name="hint_phone">Phone </string>
    <string name="button_addDealer">Add Dealer</string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="enter_placemark_title"> Please enter a Dealer Title </string>
    <string name="save_dealer"> Save Dealer </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_dealer_image">Select dealer image</string>
    <string name="change_dealer_image">Change dealer image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_deletePlacemark">Delete</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>
